--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -2,7 +2,46 @@
 {% block title %}Gallery{% endblock %}
 
 {% block content %}
+<div class="gallery_page">
 
-Gallery
+    <div class="gallery_page_heading">
+        <h1 class="gallery_title">OUR CREATIONS</h1>
+        <p class="gallery_subtitle">A CURATED LOOK AT THE ARTISTRY BEHIND OUR SIGNATURE ARRANGEMENTS.</p>
+    </div>
+
+    <div class="gallery_masonry">
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/yellow_bouquet.jpg') }}" alt="Gallery Image 1"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/red_roses.jpg') }}" alt="Gallery Image 2"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/red_purple_bouquet.jpg') }}" alt="Gallery Image 3"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image4.jpg') }}" alt="Gallery Image 4"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image5.jpg') }}" alt="Gallery Image 5"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image6.jpg') }}" alt="Gallery Image 6"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image7.jpg') }}" alt="Gallery Image 7"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image8.jpg') }}" alt="Gallery Image 8"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image9.jpg') }}" alt="Gallery Image 9"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image10.jpg') }}" alt="Gallery Image 10"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image11.jpg') }}" alt="Gallery Image 11"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image12.jpg') }}" alt="Gallery Image 12"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image13.jpg') }}" alt="Gallery Image 13"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image14.jpg') }}" alt="Gallery Image 14"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image15.jpg') }}" alt="Gallery Image 15"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image16.jpg') }}" alt="Gallery Image 16"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image17.jpg') }}" alt="Gallery Image 17"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image18.jpg') }}" alt="Gallery Image 18"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image19.jpg') }}" alt="Gallery Image 19"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image20.jpg') }}" alt="Gallery Image 20"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image21.jpg') }}" alt="Gallery Image 21"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image22.jpg') }}" alt="Gallery Image 22"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image23.jpg') }}" alt="Gallery Image 23"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image24.jpg') }}" alt="Gallery Image 24"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image25.jpg') }}" alt="Gallery Image 25"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image26.jpg') }}" alt="Gallery Image 26"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image27.jpg') }}" alt="Gallery Image 27"></div>
+        <div class="gallery_card small"><img src="{{ url_for('static', filename='images/image28.jpg') }}" alt="Gallery Image 28"></div>
+        <div class="gallery_card medium"><img src="{{ url_for('static', filename='images/image29.jpg') }}" alt="Gallery Image 29"></div>
+        <div class="gallery_card large"><img src="{{ url_for('static', filename='images/image30.jpg') }}" alt="Gallery Image 30"></div>
+    </div>
+
+</div>
 
 {% endblock %}
